# TopSongs

./: Cargo.toml  build.rs
http/: discord_get_me.http  discord_patch_bio.http  lastfm_top_tracks.http
src/: cli.rs  clipboard.rs  config.rs  discord.rs  http_template.rs  lastfm.rs  main.rs  net.rs  render.rs  text.rs  ui.rs
