[package]
name = "TopSongs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.12.0"
anyhow = "1.0"
clipboard-win = "5.4.1"
regex = "1.11"
kdl = "6.5.0"
cursive = { version = "0.21.1", default-features = false, features = ["crossterm-backend"] }
